# build-fall

./: CMakeLists.txt  README.md
cmd/: main.cpp
custom-lib/: CMakeLists.txt  lib.cpp
generate-from-python/: CMakeLists.txt  index.h  preparing.py
